[tool.poetry]
name = "prex"
version = "0.0.1"
description = "Search and replace in files with regular expressions"
authors = ["Malthe Jørgensen <malthe.jorgensen@gmail.com>"]
homepage = "https://github.com/malthejorgensen/prex"
repository = "https://github.com/malthejorgensen/prex"
license = "BSD-2-Clause"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
prex = "prex.main:cmdline_entry_point"

